Android: fix Android lint warnings fix newGame Action bar button in Comp Game mode appear remove unused code and files